# flagser-count

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  flagser-count  flagser-count-individ  pyproject.toml  setup.py  temp  temp.flag  temp0.simplices  temp1.simplices  temp2.simplices  temp3.simplices
.github/workflows/: wheels.yml
docs/: documentation_flagser.aux  documentation_flagser.tex
docs/superpowers/plans/: 2026-05-04-pypi-distribution-modernization.md
docs/superpowers/specs/: 2026-05-04-pypi-distribution-modernization-design.md
include/: argparser.h  cnpy.h  definitions.h  directed_flag_complex.h  directed_graph.h  input.h
pyflagsercount/: __init__.py  flagser_functions.py
scripts/: binary2simplex.py  binary2simplex_analysis.py  parse_progress.py
sparsehash/: Makefile  config.status  libc_allocator_with_realloc_test  simple_compat_test  simple_test  sparsetable_unittest  template_util_unittest  type_traits_unittest
src/: flagser-count-individ.cpp  flagser-count.cpp  flagser_count_bindings.cpp
test/: A.flag  B.edges  B.out  B0.simplices  B1.simplices  C.cliques  C0.binary  C1.binary  C_col.npy  C_row.npy  D_indices.npy  D_indices64.npy  D_indptr.npy  D_indptr64.npy  run_test.py
